Small modifications to lesson 2 slides.

--- a/2.md
+++ b/2.md
@@ -46,8 +46,10 @@ dog = 5
 # Assign + Plus
 dog *= 3
 # dog = 15
-dog++ # Not in python!!!
-# dog = 16
+```
+```c
+dog++; // Not in python!!!
+// dog = 16
 ```
 ---
 class: middle, center, inverse
@@ -91,7 +93,7 @@ Syntax and style change depending on your language
 
 ```c
 for (int i = 0; i < 10; i++) {
-  # Repeat 10 times
+  // Repeat 10 times
 }
 ```
 ---
@@ -131,7 +133,7 @@ class: middle, center, inverse
 ---
 ## Your second program!
 We're going to make tic-tac-toe
-```
+```sh
 cd ~/code
 mkdir projects
 cd projects
