Added hello world and adjusted spelling mistake in next lesson.

--- a/2.md
+++ b/2.md
@@ -18,7 +18,7 @@ class: middle center, inverse
 ### Operators
 > Most barebone functions, used frequently thus syntatically and semantically different
 ---
-### Opertaors
+### Operators
 ```py
 # Arithmetic
 5 + 3 # Plus
@@ -29,7 +29,7 @@ class: middle center, inverse
 # 15
 ```
 ---
-### Opertaors
+### Operators
 ```py
 5 // 3 # Integer divison
 # 1
